# watson

./: .gitignore  CHANGELOG.md  README.md  _README.md  com.github.ORG.APP.yml  meson.build  watson
_.github/workflows/: main.yml
_.vscode/: extensions.json
data/: APP.appdata.xml.in  APP.desktop.in  gresource.xml  gschema.xml  meson.build
meson/: post_install.py
po/: POTFILES
src/: Application.vala
task/: run  update-translations
template/: .editorconfig  .gitignore  README.md  com.github.ORG.APP.yml  meson.build
template/.github/workflows/: main.yml
template/data/: APP.appdata.xml.in  APP.desktop.in  gresource.xml  gschema.xml
template/po/: POTFILES  meson.build
template/site/: README.md  com.github.ORG.APP.flatpakref  index.css  index.html  index.js
template/src/: Application.vala  MainWindow.vala
template/src/Constants/: Colors.vala  Config.vala.in
template/src/Widgets/: HeaderBar.vala
template/task/: build  install  package  preview-in-appcenter  publish  run-package  take-screenshots  update-translations
